Fixed alignment on quick add form, created flash alert markup

--- a/src/index.scss
+++ b/src/index.scss
@@ -71,3 +71,9 @@ $navbar-brand-font-size: 1.75rem;
     width: 100%;
   }
 }
+
+.gp-alert {
+  max-width: 45rem;
+  margin-left: auto;
+  margin-right: auto;
+}
